--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-beta01'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -46,16 +46,16 @@ ext {
     compileSdkVersion = 28
     minSdkVersion = 15
     targetSdkVersion = 28
-    supportLibVersion = '1.0.0'
+    supportLibVersion = '1.1.0'
     constraintLayoutVersion = '1.1.3'
-    archComponentsVersion = '2.0.0'
-    roomVersion = '2.1.0-alpha01'
-    pagingVersion = '2.1.0-alpha01'
-    retrofitVersion = "2.3.0"
-    okhttpLoggingInterceptorVersion = "3.9.0"
+    archComponentsVersion = '2.1.0'
+    roomVersion = '2.2.0-rc01'
+    pagingVersion = '2.1.0'
+    retrofitVersion = '2.6.2'
+    okhttpLoggingInterceptorVersion = '4.2.2'
 
-    runnerVersion = '1.1.0-alpha4'
+    runnerVersion = '1.3.0-alpha02'
     rulesVersion = "1.0.1"
     junitVersion = "4.12"
-    espressoVersion = '3.1.0-beta02'
+    espressoVersion = '3.3.0-alpha02'
 }
